force-app/main/default/objects/Event__c/fields/Account_From__c.field-meta.xml
<CustomField>
    <fullName>Account_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Places Tracker</description>
    <label>Account From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events (Account From)</relationshipLabel>
    <relationshipName>EventsTo</relationshipName>
    <type>Lookup</type>
</CustomField>