force-app/main/default/objects/Event__c/fields/Account_To__c.field-meta.xml
<CustomField>
    <fullName>Account_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Places Tracker</description>
    <label>Account To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>