force-app/main/default/objects/Event__c/fields/Address_From__c.field-meta.xml
<CustomField>
    <fullName>Address_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address From</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>