force-app/main/default/objects/Event__c/fields/Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Address_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Address Location</description>
    <label>Address Location</label>
    <referenceTo>Address_Location__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>