force-app/main/default/objects/Event__c/fields/Address_To__c.field-meta.xml
<CustomField>
    <fullName>Address_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address To</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Events (Address To)</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>