force-app/main/default/objects/Event__c/fields/Allotment_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Allotment_s_Date__c</fullName>
    <label>Allotment(s) Date</label>
    <type>Date</type>
</CustomField>