force-app/main/default/objects/Event__c/fields/Batch_Event_Completed__c.field-meta.xml
<CustomField>
    <fullName>Batch_Event_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Event Completed</label>
    <type>Checkbox</type>
</CustomField>