force-app/main/default/objects/Event__c/fields/Cessation_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Cessation_Effective_Date__c</fullName>
    <label>Cessation Effective Date</label>
    <type>Date</type>
</CustomField>