force-app/main/default/objects/Event__c/fields/Cessation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cessation_Type__c</fullName>
    <label>Cessation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entire allotment: no places have taken effect</fullName>
            </value>
            <value>
                <fullName>Part allotment: some places have taken effect. Review of S14-5(4) Conditions is required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>