force-app/main/default/objects/Event__c/fields/Current_PA_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_PA_Period_End_Date__c</fullName>
    <label>Current PA Period End Date</label>
    <type>Date</type>
</CustomField>