force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Allotment</fullName>
            </value>
            <value>
                <fullName>Record or Edit S14-5(4) Conditions</fullName>
            </value>
            <value>
                <fullName>Application For Determination</fullName>
            </value>
            <value>
                <fullName>Transfer - S16-13/S16-1</fullName>
            </value>
            <value>
                <fullName>Change Transfer Date</fullName>
            </value>
            <value>
                <fullName>Revocation(Provisional Places)</fullName>
                <label>Revocation (Provisional Places)</label>
            </value>
            <value>
                <fullName>Revocation(Places Taken Effect)</fullName>
                <label>Revocation (Places Taken Effect)</label>
            </value>
            <value>
                <fullName>Cease PA</fullName>
            </value>
            <value>
                <fullName>Extend PA Period</fullName>
            </value>
            <value>
                <fullName>Surrender PA</fullName>
            </value>
            <value>
                <fullName>Convert Care Level Mix</fullName>
            </value>
            <value>
                <fullName>Change Care Setting</fullName>
            </value>
            <value>
                <fullName>Cease S14-9 Places</fullName>
            </value>
            <value>
                <fullName>Relinquish Places</fullName>
            </value>
            <value>
                <fullName>Manage Offline Places</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
            <value>
                <fullName>PA Variation by Provider</fullName>
            </value>
            <value>
                <fullName>PA Variation by Secretary</fullName>
            </value>
            <value>
                <fullName>Change Variation Day</fullName>
            </value>
            <value>
                <fullName>Combine</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Correct S14-5(4) Conditions of Allocation</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Resent Sent Documents</fullName>
            </value>
            <value>
                <fullName>Reprofile Adjusted Subsidy</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Vary End Date of Allotment</fullName>
            </value>
            <value>
                <fullName>Transfer - S16-13</fullName>
            </value>
            <value>
                <fullName>Transfer - S16-1</fullName>
            </value>
            <value>
                <fullName>Create Allotment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>