force-app/main/default/objects/Event__c/fields/Expected_Extended_PA_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Extended_PA_Period_End_Date__c</fullName>
    <label>Expected Extended PA Period End Date</label>
    <type>Date</type>
</CustomField>