force-app/main/default/objects/Event__c/fields/Extension_Period__c.field-meta.xml
<CustomField>
    <fullName>Extension_Period__c</fullName>
    <label>Extension Period</label>
    <length>22</length>
    <type>Text</type>
</CustomField>