force-app/main/default/objects/Event__c/fields/GPMS_Application_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Application_Decision_Date__c</fullName>
    <label>Application Decision Date</label>
    <type>Date</type>
</CustomField>