force-app/main/default/objects/Event__c/fields/GPMS_Care_Setting_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Care_Setting_Effective_Date__c</fullName>
    <description>The date to change the care setting</description>
    <label>Care Setting Effective Date</label>
    <type>Date</type>
</CustomField>