force-app/main/default/objects/Event__c/fields/GPMS_Cessation_Reason__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Cessation_Reason__c</fullName>
    <description>Cessation Reason  for cease places</description>
    <label>Cessation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired under S14-9(4)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>