force-app/main/default/objects/Event__c/fields/GPMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comments__c</fullName>
    <description>Allows user to enter any comments associated with ceasing.</description>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>