force-app/main/default/objects/Event__c/fields/GPMS_Conversion_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Conversion_Effective_Date__c</fullName>
    <description>The date to convert care level mix</description>
    <label>Conversion Effective Date</label>
    <type>Date</type>
</CustomField>