force-app/main/default/objects/Event__c/fields/GPMS_Date_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_Effective_From__c</fullName>
    <description>Indicates the date that the ceasing took effect.</description>
    <label>Date Effective From</label>
    <type>Date</type>
</CustomField>