force-app/main/default/objects/Event__c/fields/GPMS_Date_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_of_Approval__c</fullName>
    <description>The date to approve this event</description>
    <label>Date of Approval</label>
    <type>Date</type>
</CustomField>