force-app/main/default/objects/Event__c/fields/GPMS_Date_of_Decision__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_of_Decision__c</fullName>
    <description>When STOs made a decision about offline places</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>