force-app/main/default/objects/Event__c/fields/GPMS_Date_of_Notice__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_of_Notice__c</fullName>
    <description>Received date of Notice Type</description>
    <label>Date of Notice</label>
    <type>Date</type>
</CustomField>