force-app/main/default/objects/Event__c/fields/GPMS_Decision__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Decision__c</fullName>
    <description>The delegate decision</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposals satisfactory unmodified</fullName>
            </value>
            <value>
                <fullName>Proposals satisfactory as unmodified by approved provider</fullName>
            </value>
            <value>
                <fullName>Secretary sets out new proposals</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>