force-app/main/default/objects/Event__c/fields/GPMS_Decision_Due_By_No_Later_Than_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Decision_Due_By_No_Later_Than_Date__c</fullName>
    <description>Decision Due By No Later Than Date</description>
    <label>Decision Due By No Later Than Date</label>
    <type>Date</type>
</CustomField>