force-app/main/default/objects/Event__c/fields/GPMS_Delegate_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Delegate_Name__c</fullName>
    <description>The delegate&apos;s name</description>
    <label>Delegate Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>