force-app/main/default/objects/Event__c/fields/GPMS_Delegate_position__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Delegate_position__c</fullName>
    <description>The delegate&apos;s current position</description>
    <label>Delegate Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[42201001] - APS6 Departmental Officer NSW ACT</fullName>
            </value>
            <value>
                <fullName>[50051395] - APS6 Departmental Officer NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001502] - APS6 Departmental Officer NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001443] - APS6 Departmental Officer NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001441] - APS6 Departmental Officer NSW ACT</fullName>
            </value>
            <value>
                <fullName>[50051395] - APS6 Departmental Officer NSWACT</fullName>
            </value>
            <value>
                <fullName>[42001441] - APS6 Departmental Officer NSWACT</fullName>
            </value>
            <value>
                <fullName>[42001502] - APS6 Departmental Officer NSWACT</fullName>
            </value>
            <value>
                <fullName>[42201001] - APS6 Departmental Officer NSWACT</fullName>
            </value>
            <value>
                <fullName>[42001443] - APS6 Departmental Officer NSWACT</fullName>
            </value>
            <value>
                <fullName>[1201345] - Assistant Secretary - AACD Aged Care Programs BR</fullName>
            </value>
            <value>
                <fullName>[1220252] - Assistant State Manager - Aged Care Branch, New South Wales</fullName>
            </value>
            <value>
                <fullName>[1200607] - Assistant Territory Manager, Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>[1202744] - Departmental Officer, Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>[20001692] - Departmental Officer, Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>[1220252] - Director, Aged Care Branch, NSW &amp; ACT</fullName>
            </value>
            <value>
                <fullName>[42001474] - Director, Aged Care Programmes</fullName>
            </value>
            <value>
                <fullName>[50051393] - EL1 Assistant Director NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001420] - EL1 Assistant Director NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001439] - EL1 Assistant Director NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001585] - EL1 Assistant Director NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001439] - EL1 Assistant Director NSWACT</fullName>
            </value>
            <value>
                <fullName>[50051393] - EL1 Assistant Director NSWACT</fullName>
            </value>
            <value>
                <fullName>[42001420] - EL1 Assistant Director NSWACT</fullName>
            </value>
            <value>
                <fullName>[42001585] - EL1 Assistant Director NSWACT</fullName>
            </value>
            <value>
                <fullName>[42001331] - EL1 Assistant Director VIC</fullName>
            </value>
            <value>
                <fullName>[42001513] - EL2 Director NSW ACT</fullName>
            </value>
            <value>
                <fullName>[42001513] - EL2 Director NSWACT</fullName>
            </value>
            <value>
                <fullName>[42004924] - EL2 Director Residential Care</fullName>
            </value>
            <value>
                <fullName>[20027084] - Executive Level 1 NSW/ACT ageing and aged care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>