force-app/main/default/objects/Event__c/fields/GPMS_Event_Allotment__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Event_Allotment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up event allotment</description>
    <label>Event Allotment</label>
    <referenceTo>Event_Allotment__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>