force-app/main/default/objects/Event__c/fields/GPMS_is_Acting__c.field-meta.xml
<CustomField>
    <fullName>GPMS_is_Acting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this delegate is acting</description>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>