force-app/main/default/objects/Event__c/fields/GPMS_Notice_of_Intention_Sent__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Notice_of_Intention_Sent__c</fullName>
    <description>Date Notice of Intention to Revoke which was sent to Approved Provider</description>
    <label>Notice of Intention Sent</label>
    <type>Date</type>
</CustomField>