force-app/main/default/objects/Event__c/fields/GPMS_Notice_of_Transfer_Received_date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Notice_of_Transfer_Received_date__c</fullName>
    <label>Notice of Transfer Received date</label>
    <type>Date</type>
</CustomField>