force-app/main/default/objects/Event__c/fields/GPMS_Notice_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Notice_Received_Date__c</fullName>
    <description>Manage Offline Notice Received Date</description>
    <label>Notice Received Date</label>
    <type>Date</type>
</CustomField>