force-app/main/default/objects/Event__c/fields/GPMS_Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Notice_Type__c</fullName>
    <description>Revocation reason</description>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Places ceased under s18-1(c)</fullName>
            </value>
            <value>
                <fullName>Revocation of Provider’s Approval Status[s10-3]</fullName>
            </value>
            <value>
                <fullName>Revocation of Provisional Places, conditions not met[s15-4(1)]</fullName>
            </value>
            <value>
                <fullName>Revocation of Places [S66- 1(D)]</fullName>
            </value>
            <value>
                <fullName>Revocation of unused Places [S18-5(1)]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>