force-app/main/default/objects/Event__c/fields/GPMS_Number_Of_Inactive_Places_Ceased__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Number_Of_Inactive_Places_Ceased__c</fullName>
    <description>Indicates the number of inactive places that have been ceased.</description>
    <label>Number Of Inactive Places Ceased</label>
    <length>5</length>
    <type>Text</type>
</CustomField>