force-app/main/default/objects/Event__c/fields/GPMS_Previous_Operational_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Previous_Operational_Effective_Date__c</fullName>
    <description>The Previous Operational Effective Date for bring online</description>
    <label>Previous Operational Effective Date</label>
    <type>Date</type>
</CustomField>