force-app/main/default/objects/Event__c/fields/GPMS_Proposed_Operational_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Proposed_Operational_Date__c</fullName>
    <description>The proposed operation date for bring online event</description>
    <label>Proposed Operational Date</label>
    <type>Date</type>
</CustomField>