force-app/main/default/objects/Event__c/fields/GPMS_Proposed_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Proposed_Transfer_Date__c</fullName>
    <label>Proposed Transfer Date</label>
    <type>Date</type>
</CustomField>