force-app/main/default/objects/Event__c/fields/GPMS_Proposed_Variation_Day__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Proposed_Variation_Day__c</fullName>
    <label>Proposed Variation Day</label>
    <type>Date</type>
</CustomField>