force-app/main/default/objects/Event__c/fields/GPMS_Relinquishment_Reason__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Relinquishment_Reason__c</fullName>
    <description>Relinquishment Reason</description>
    <label>Relinquishment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S18-2 Provider Relinquishes Places</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>