force-app/main/default/objects/Event__c/fields/GPMS_Revocation_Type__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Revocation_Type__c</fullName>
    <label>Revocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revoke Some Places</fullName>
                <label>Revoke Some Places (Review of S14-5(4) Conditions is required)</label>
            </value>
            <value>
                <fullName>Revoke All Places</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>