force-app/main/default/objects/Event__c/fields/GPMS_signed_by_STO_Delegate__c.field-meta.xml
<CustomField>
    <fullName>GPMS_signed_by_STO_Delegate__c</fullName>
    <description>The signed date of this event</description>
    <label>Deed of Variation signed by STO Delegate</label>
    <type>Date</type>
</CustomField>