force-app/main/default/objects/Event__c/fields/GPMS_Subs_Due_By_No_Later_Than_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Subs_Due_By_No_Later_Than_Date__c</fullName>
    <description>Submissions Due By No Later Than Date</description>
    <label>Submissions Due By No Later Than Date</label>
    <type>Date</type>
</CustomField>