force-app/main/default/objects/Event__c/fields/GPMS_Summary_Of_Proposals__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Summary_Of_Proposals__c</fullName>
    <description>Summary of proposals for ensuring that care needs are appropriately met</description>
    <label>Summary Of Proposals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>