force-app/main/default/objects/Event__c/fields/GPMS_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Transfer_Type__c</fullName>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer entire service without variation</fullName>
            </value>
            <value>
                <fullName>Transfer entire service with variation</fullName>
            </value>
            <value>
                <fullName>Transfer part of a service with variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>