force-app/main/default/objects/Event__c/fields/GPMS_Veto_Decision_by_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Veto_Decision_by_Date__c</fullName>
    <label>Veto Decision by Date</label>
    <type>Date</type>
</CustomField>