force-app/main/default/objects/Event__c/fields/Is_Extended_Previously__c.field-meta.xml
<CustomField>
    <fullName>Is_Extended_Previously__c</fullName>
    <label>Is Extended Previously?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Yes, the Approved Provider is now seeking an increase to the extension</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>