force-app/main/default/objects/Event__c/fields/LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyCreatedDate__c</fullName>
    <description>Legacy created date field.</description>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>