force-app/main/default/objects/Event__c/fields/Link_To_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Document__c</fullName>
    <description>Indiactes the link for the documents</description>
    <label>Link To Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>