force-app/main/default/objects/Event__c/fields/NewPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>NewPrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>