force-app/main/default/objects/Event__c/fields/NewServiceName__c.field-meta.xml
<CustomField>
    <fullName>NewServiceName__c</fullName>
    <label>New Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>