force-app/main/default/objects/Event__c/fields/Notice_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Resolve__c</fullName>
    <label>Notice to Resolve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>