force-app/main/default/objects/Event__c/fields/Original_PA_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_PA_Period_End_Date__c</fullName>
    <label>Original PA Period End Date</label>
    <type>Date</type>
</CustomField>