force-app/main/default/objects/Event__c/fields/Premises_Being_Built__c.field-meta.xml
<CustomField>
    <fullName>Premises_Being_Built__c</fullName>
    <label>Premises Being Built</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>