force-app/main/default/objects/Event__c/fields/Premises_Built_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Premises_Built_Outcome__c</fullName>
    <label>Premises Built Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workonthepremises</fullName>
                <label>Work on the premises will be substantially finished before the end of the extension period.</label>
            </value>
            <value>
                <fullName>Substantialamount</fullName>
                <label>A substantial amount will be spent by the approved provider, in connection with the work on the premises, to meet the conditions to which the allocation was subject.</label>
            </value>
            <value>
                <fullName>Premisesdelay</fullName>
                <label>If work on the premises has been delayed by circumstances beyond the approved provider’s control – work on the premises will proceed satisfactorily within a reasonable period.</label>
            </value>
            <value>
                <fullName>Reasonableprogress</fullName>
                <label>Reasonable progress towards the construction of the premises will be made by the end of the extension period.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>