force-app/main/default/objects/Event__c/fields/Previous_Page__c.field-meta.xml
<CustomField>
    <fullName>Previous_Page__c</fullName>
    <description>The page action</description>
    <label>Previous Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>