force-app/main/default/objects/Event__c/fields/Proposed_Date_of_Combine__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Combine__c</fullName>
    <description>Proposed Date of Combine</description>
    <label>Proposed Date of Combine</label>
    <type>Date</type>
</CustomField>