force-app/main/default/objects/Event__c/fields/Reason_Applicant_Ext__c.field-meta.xml
<CustomField>
    <fullName>Reason_Applicant_Ext__c</fullName>
    <label>The Reason for Extension</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractors</fullName>
                <label>Contractors - Difficulties in attracting or keeping contractors or tenders including architects, builders, traders people and industrial problems.</label>
            </value>
            <value>
                <fullName>Approved Provider</fullName>
                <label>Approved Provider - Organisational death or incapacity of proprietor, restructuring, change of key staff involved in decision making, organisational mergers, sale or purchase of age care facilities affecting the provisional allocation.</label>
            </value>
            <value>
                <fullName>Construction</fullName>
                <label>Construction - Construction probs.</label>
            </value>
            <value>
                <fullName>Finance</fullName>
                <label>Finance - Difficulties obtaining finance for construction.</label>
            </value>
            <value>
                <fullName>Land</fullName>
                <label>Land - Land originally estimated to be suitable but later discovered to be unavailable, eg: bushfire regulations, too close to environmentally/culturally sensitive or hazardous sites. Or, no suitable land to be found at acceptable price.</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <label>Planning - Applications for building/development approvals to local government authorises and appeals to other agencies as results of decisions lengthy process in regard to resident objections etc.</label>
            </value>
            <value>
                <fullName>Priorities</fullName>
                <label>Priorities - Concurrent refurbishments: additional places being allocated in subsequent rounds requiring re-design, combining provisional allocation construction with refurbishment, That is, other projects happening at the same time.</label>
            </value>
            <value>
                <fullName>Site Problems</fullName>
                <label>Site Problems - Physical site problems and weather conditions delaying construction process. Included sites found to be contaminated, on flood plains, subjects to heritage restrictions etc.</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - Other reasons, mostly minor delays. Could also include problems in securing agreements to work.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>